nuevo sketch con interactividad: iteración, longitud, proporción

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.js"></script> -->
   <!-- <script src="p5.recognize.js"></script>
   <script src="p5.drag.js"></script> -->
-  <script src="sketch.js"></script>
+  <script src="sketch2.js"></script>
 </head>
 
 <body>
