Ya se pueden subir fotos pero solo se ven hasta que mueves el slider

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       background-color: #1b1b1b;
     }
   </style>
-  <!-- The following libraries are hosted for us by cdnjs, no need to keep copies of them in the repository. -->
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.js"></script> -->
-  <!-- <script src="p5.recognize.js"></script>
-  <script src="p5.drag.js"></script> -->
-  <script src="sketch2.js"></script>
+  <script src="sketch3.js"></script>
 </head>
 
 <body>
+  <input type="file" id="imageUpload" accept="image/*">
+  <button onclick="uploadImage()">Upload Image</button>
+  <div id="p5_canvas"></div>
   <main>
   </main>
 </body>
