Ya se puede poner una foto en el fractal

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <input type="file" id="imageUpload" accept="image/*">
-  <button onclick="uploadImage()">Upload Image</button>
+  <button onclick="uploadImage()">Subir imagen</button>
   <div id="p5_canvas"></div>
   <main>
   </main>
