--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js example</title>
+  <title>Fractalízate 2024</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -18,7 +18,13 @@
   <div class = "container-fluid">
     <div class="row">
       <div class="col">
-        <h1>Fractal</h1>
+        <img src="https://github.com/LabVS-IM-UNAM/dim24-app/blob/main/logo-negro-color.png"> </img>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <h1>Fractalízate #DIM2024</h1>
       </div>
     </div>
 
@@ -26,16 +32,25 @@
       <div class="col">
         <div id = "fractal"></div>
       </div>
-      
+
     </div>
-    
+
     <div class="row">
       <div class="col">
         <div id ="slider"></div>
       </div>
       <div class="col">
+
+        <input type="file" id="imageUpload" accept="image/*">
+        <button onclick="uploadImage()">Subir imagen</button>
+<br>
+<br>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quam laboriosam voluptatem, dolorum esse quidem aut ex quasi temporibus laborum perferendis repellendus iusto magnam nesciunt tempore? Sequi consequatur nobis et.
+          Las matemáticas tienen múltiples posibilidades de inspiración y belleza más allá de números y símbolos. ¿Te has fijado en la forma de los helechos o del brócoli? ¿Has observado la estructura de un relámpago o de un copo de nieve? Todos ellos son algunos ejemplos en la naturaleza que se parecen a los objetos matemáticos llamados fractales.
+<br>
+El término fractal proviene del latín y significa quebrado o irregular. Entre sus propiedades, los fractales tienen una forma en la que cualquiera de sus partes y sin importar su tamaño o escala, está compuesta por repeticiones de sí misma; por ello, son también infinitos.
+<br>
+Los fractales fueron popularizados por sus formas coloridas y atractivas a finales de los años setentas y principios de los ochentas por el matemático Benoît Mandelbrot que se dedicó a estudiarlos. De hecho, el fractal más conocido y estudiado es el conjunto de Mandelbrot, aunque hay otros muy conocidos como el conjunto de Cantor, el conjunto de Julia, la curva de Koch y el triángulo de Sierpinski, que se construyen a partir de operaciones muy sencillas. Con el desarrollo de las computadoras se han generado imágenes fractales mucho más complejas, que se parecen a las obtenidas de la naturaleza.
         </p>
       </div>
     </div>
