cabezal y cambios mínimos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col">
-        <img src="imgs/cabezal.png"> </img>
+        <img src="cabezal.png"> </img>
       </div>
     </div>
 
