--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
     <div class="row">
       <div class="col">
         <h1>Fractalízate #DIM2024</h1>
+
+        <p>Te invitamos a <strong>Jugar con las matemáticas</strong>
+        creando y personalizando un fractal.
+
+        <br>
+
+        <strong>¡Feliz día internacional de las matemáticas!</strong> </p>
+
       </div>
     </div>
 
@@ -42,9 +50,15 @@
       </div>
       <div class="col">
         <br>
-        <input type="file" id="imageUpload" accept="image/*">
-        <button onclick="uploadImage()">Subir imagen</button>
-
+          <input type="file" id="imageUpload" accept="image/*">
+          <button onclick="uploadImage()">Subir imagen</button>
+        <br>
+        <br>
+          <div id = "Descargar">
+            <button onclick="descargarImagen()">
+              ¡Descarga tu fractal!
+            </button>
+          </div>
       </div>
     </div>
 
@@ -74,23 +88,21 @@
         </p>
       </div>
 
-      <div id = "Descargar">
-        <button onclick="descargarImagen()">
-          Descargar
-        </button>
-      </div>
-    </div>
 
+    </div>
 
 
     <footer>
       <br>
       <br>
       <div class="textwidget">
-        <p> <small> © Esta aplicación fue desarrollada por los estudiantes del Servicio Social del Laboratorio de
-            Visualización y Sonorización
-            para el Instituto de Matemáticas de la UNAM.
+        <p> <small> © Esta aplicación fue desarrollada por los estudiantes del Servicio Social del
+          <a target="_blank" href="https://labvs.hotglue.me/">Laboratorio de Visualización y Sonorización</a>
+            para el <a target="_blank" href="https://www.matem.unam.mx/">Instituto de Matemáticas de la UNAM</a> .
             <nobr />
+            <br>
+            <br>
+            Consulta el <a href="https://www.matem.unam.mx/privacidad/integral">Aviso de privacidad</a>
           </small> </p>
       </div>
     </footer>
