--- a/index.html
+++ b/index.html
@@ -10,17 +10,25 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="style.css">
+
+  <style>
+    /* Para que el cabezal escale con el tamaño de la ventana */
+    img.cabezal {
+      width: 95%; 
+      height: auto; 
+      display: block; 
+    }
+  </style>
+
 </head>
 
 <body>
   <!--
     Pagina responsiva
   -->
+  <img class="cabezal" src="cabezal.png" alt="Cabezal">
   <div class="container-fluid">
     <div class="row">
-      <div class="col">
-        <img src="cabezal.png"> </img>
-      </div>
     </div>
 
     <div class="row">
@@ -33,6 +41,7 @@
         <br>
 
         <strong>¡Feliz día internacional de las matemáticas!</strong> </p>
+
 
       </div>
     </div>
@@ -50,15 +59,9 @@
       </div>
       <div class="col">
         <br>
-          <input type="file" id="imageUpload" accept="image/*">
-          <button onclick="uploadImage()">Subir imagen</button>
-        <br>
-        <br>
-          <div id = "Descargar">
-            <button onclick="descargarImagen()">
-              ¡Descarga tu fractal!
-            </button>
-          </div>
+        <input type="file" id="imageUpload" accept="image/*">
+        <button onclick="uploadImage()">Subir imagen</button>
+
       </div>
     </div>
 
@@ -88,21 +91,23 @@
         </p>
       </div>
 
-
+      <div id = "Descargar">
+        <button onclick="descargarImagen()">
+          Descargar
+        </button>
+      </div>
     </div>
+
 
 
     <footer>
       <br>
       <br>
       <div class="textwidget">
-        <p> <small> © Esta aplicación fue desarrollada por los estudiantes del Servicio Social del
-          <a target="_blank" href="https://labvs.hotglue.me/">Laboratorio de Visualización y Sonorización</a>
-            para el <a target="_blank" href="https://www.matem.unam.mx/">Instituto de Matemáticas de la UNAM</a> .
+        <p> <small> © Esta aplicación fue desarrollada por los estudiantes del Servicio Social del Laboratorio de
+            Visualización y Sonorización
+            para el Instituto de Matemáticas de la UNAM.
             <nobr />
-            <br>
-            <br>
-            Consulta el <a href="https://www.matem.unam.mx/privacidad/integral">Aviso de privacidad</a>
           </small> </p>
       </div>
     </footer>
